Increase the initial permgen size to slightly higher than what OG needs to avoid unnecessary resizes