@@ -34,7 +34,7 @@ fi
 [ -f /etc/default/opengamma/tools ] && . /etc/default/opengamma/tools
 [ -f $HOME/.opengamma/tools ] && . $HOME/.opengamma/tools
 
-MEM_OPTS=${MEM_OPTS:--Xms512m -Xmx1024m -XX:MaxPermSize=256M}
+MEM_OPTS=${MEM_OPTS:--Xms512m -Xmx1024m -XX:PermSize=128M -XX:MaxPermSize=256M}
 GC_OPTS=${GC_OPTS:-XX:+UseParallelGC -XX:+UseParallelOldGC}
 
 
